Added first version: dice roll

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,22 @@
   <link rel="stylesheet" href="./css/index.css">
   <script type="module" src="./js/index.js"></script>
 </head>
-<body>
 
+<body>
+  <div class="die-container">
+    <div class="dice" id="dice1">
+      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <button id="button1" class="dice-button">Roll</button>
+    </div>
+    <div class="dice" id="dice2">
+      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <button id="button2" class="dice-button">Roll</button>
+    </div>
+    <div class="dice" id="dice3">
+      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <button id="button3" class="dice-button">Roll</button>
+    </div>
+  </div>
 </body>
+
 </html>
