--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <h1>Dice roll</h1>
   <div class="die-container">
     <div class="dice" id="dice1">
       <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
