--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
   
   
-  <script type="module" crossorigin src="/lanzar-dados-js/index.c5d5e623.js"></script>
-  <link rel="stylesheet" href="/lanzar-dados-js/index.d0912aa8.css">
+  <script type="module" crossorigin src="/dice-roll-js/index.c5d5e623.js"></script>
+  <link rel="stylesheet" href="/dice-roll-js/index.d0912aa8.css">
 </head>
 
 <body>
