Better page look

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
   <h1>Dice roll</h1>
   <div class="die-container">
     <div class="dice" id="dice1">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button1" class="dice-button">Roll</button>
     </div>
     <div class="dice" id="dice2">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button2" class="dice-button">Roll</button>
     </div>
     <div class="dice" id="dice3">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button3" class="dice-button">Roll</button>
     </div>
   </div>
