--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dice Roll</title>
   
   
   <script type="module" crossorigin src="/dice-roll-js/index.c5d5e623.js"></script>
-  <link rel="stylesheet" href="/dice-roll-js/index.d0912aa8.css">
+  <link rel="stylesheet" href="/dice-roll-js/index.901d7006.css">
 </head>
 
 <body>
   <h1>Dice roll</h1>
   <div class="die-container">
     <div class="dice" id="dice1">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button1" class="dice-button">Roll</button>
     </div>
     <div class="dice" id="dice2">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button2" class="dice-button">Roll</button>
     </div>
     <div class="dice" id="dice3">
-      <img class="dice-face" src="dice/dice-1.png" width="25px" height="25px">
+      <img class="dice-face" src="dice/dice-1.png">
       <button id="button3" class="dice-button">Roll</button>
     </div>
   </div>
